buildscript {
    repositories {
        mavenCentral()
        jcenter()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion")
    }
}

apply plugin: "java"
apply plugin: "idea"
apply plugin: "org.springframework.boot"
apply plugin: "io.spring.dependency-management"

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    //spring boot
    compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")

    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
    testCompile("org.springframework.boot:spring-boot-starter-webflux:$springBootVersion")//for WebTestClient testing
    testCompile("io.rest-assured:rest-assured:$restAssuredVersion")
    testCompile("junit:junit:$junitVersion")
}
